objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Demand_Driver__c</fullName>
        <description>Created for the Australia team to identify the demand driver of an opportunity</description>
        <label>Demand Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contract Extension</fullName>
                </value>
                <value>
                    <fullName>Divestment</fullName>
                </value>
                <value>
                    <fullName>New Development</fullName>
                </value>
                <value>
                    <fullName>New Project</fullName>
                </value>
                <value>
                    <fullName>Re-tendering</fullName>
                </value>
                <value>
                    <fullName>Service Gap</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dev_Margin__c</fullName>
        <label>Dev Profit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Lead</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Development Lead)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Revenue__c</fullName>
        <inlineHelpText>The revenue allocated to the Development arm of this Opportunity, as opposed to Construction piece. This is relevant only for RES Developed Projects and not 3rd Party Construction.</inlineHelpText>
        <label>Dev Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distributed_Margin__c</fullName>
        <inlineHelpText>The Gross Profit before tax that is associated for Distributed piece of this Opportunity.</inlineHelpText>
        <label>Distributed Margin</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distributed_Price_Request__c</fullName>
        <label>Distributed Price Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send to Ben for Review</fullName>
                </value>
                <value>
                    <fullName>Send to Operations Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributed_Revenue__c</fullName>
        <inlineHelpText>If there are multiple Technology Types included in this Opportunity and one of them is either DSM, DR Customer, or Microgrid, please input the revenue associated the sole Distributed Technology here.</inlineHelpText>
        <label>Distributed Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Documents_Needing_Legal_Review__c</fullName>
        <inlineHelpText>Type of Documents for Review.</inlineHelpText>
        <label>Documents Needing Legal Review</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Purchase Agrmnt-Term Sheet</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>BOP</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>Construction &amp;Maintenance Labor Agrmnt</fullName>
                </value>
                <value>
                    <fullName>Integrity Guide</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>T&amp;Cs</fullName>
                </value>
                <value>
                    <fullName>Non-Exclusive Overhead Distribution Construction Agrmnt</fullName>
                </value>
                <value>
                    <fullName>Past Performance Record Questions</fullName>
                </value>
                <value>
                    <fullName>Scope of Work</fullName>
                </value>
                <value>
                    <fullName>Master Service Contract</fullName>
                </value>
                <value>
                    <fullName>Substation &amp; Transmission Line Construction Agreement</fullName>
                </value>
                <value>
                    <fullName>Engineering Services Scope of Works</fullName>
                </value>
                <value>
                    <fullName>Claims Dislosure Question</fullName>
                </value>
                <value>
                    <fullName>Substation EPC</fullName>
                </value>
                <value>
                    <fullName>All Substation Scope of Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dollars_kW__c</fullName>
        <formula>IF(Size__c&lt;0.1,0,Amount /  Size__c / 1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$/kW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_Cost__c</fullName>
        <label>EPC Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Edit_Next_Steps__c</fullName>
        <formula>HYPERLINK(&quot;javascript:window.open(&apos;/apex/EditNextSteps?id=&quot;&amp;Id&amp;&quot;&apos;, &apos;Edit Next Steps&apos;, &apos;toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=Yes, copyhistory=no, width=500, height=400, top=0, left=0&apos;); void(0);&quot;, &quot;Edit Next Steps&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Next Steps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Update__c</fullName>
        <formula>HYPERLINK(&quot;javascript:window.open(&apos;/apex/EditUpdate?id=&quot;&amp;Id&amp;&quot;&apos;, &apos;Edit Update&apos;, &apos;toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=Yes, copyhistory=no, width=500, height=400, top=0, left=0&apos;); void(0);&quot;, &quot;Edit Update&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enclosure_Manufacturer__c</fullName>
        <label>Enclosure Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_of_Winning_Price__c</fullName>
        <inlineHelpText>Please estimate the Total Bid Price Amount that our competitor won with.</inlineHelpText>
        <label>Estimate of Winning Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimation_Class__c</fullName>
        <label>Estimation Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Class 1</fullName>
                </value>
                <value>
                    <fullName>Class 2</fullName>
                </value>
                <value>
                    <fullName>Class 3</fullName>
                </value>
                <value>
                    <fullName>Class 4</fullName>
                </value>
                <value>
                    <fullName>Class 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Margin__c</fullName>
        <formula>ExpectedRevenue * Gross_Profit_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Expected Revenue * Gross Profit Margin%</inlineHelpText>
        <label>Expected Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the old ID field from the EMEA SF Org</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FY_Target__c</fullName>
        <description>Converts the target date to a fiscal year format for reporting</description>
        <formula>&quot;FY&quot; &amp; 
TEXT(IF(MONTH(CloseDate) &gt;= 11,((YEAR(CloseDate)+ 1)),((YEAR(CloseDate)))))
&amp; &quot;-&quot; 
&amp; &quot;Q&quot; 
&amp;  TEXT(FiscalQuarter__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Files_Attached__c</fullName>
        <description>Auto-calculated from ContentDocumentLinkTrigger Apex Trigger.

Needed for Support Services. All Technologies.</description>
        <inlineHelpText>Please attach all required documentation needed by Support Services (EPC, PVSyst report, &amp; anything that clarifies the project economics). 

This field auto counts all the Files attached to this Oppty.</inlineHelpText>
        <label># of Files Attached</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Completion_Date__c</fullName>
        <inlineHelpText>An estimated date for when RES has completely finished the construction of a Project and handed it off to the Owner.</inlineHelpText>
        <label>Final Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FiscalQuarter__c</fullName>
        <formula>CASE(MONTH(CloseDate) ,
1, 1,
2, 2,
3, 2,
4, 2,
5, 3,
6, 3,
7, 3,
8, 4,
9, 4,
10, 4,
11, 1,
12, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FiscalQuarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Track__c</fullName>
        <label>Fixed/Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GWh_Max__c</fullName>
        <label>GWh Max</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWh_Min__c</fullName>
        <label>GWh Min</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWh_Target__c</fullName>
        <label>GWh Target</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Margin__c</fullName>
        <formula>IF(Amount&lt;1,0, Gross_Profit__c/Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <inlineHelpText>Estimated Net Profit Before Tax</inlineHelpText>
        <label>Gross Profit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HV_kW__c</fullName>
        <label>$HV/kW</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hive_Project_Site__c</fullName>
        <inlineHelpText>This URL is a quick link to the parallel Project Site in Hive / Sharepoint</inlineHelpText>
        <label>Hive Project Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IT_Contract_Payments_DSA_total__c</fullName>
        <label>Contract Payments DSA total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Contract_Payments_SPA__c</fullName>
        <label>Contract Payments SPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_DSA_Milestone_1__c</fullName>
        <label>DSA Milestone 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_DSA_Milestone_2__c</fullName>
        <label>DSA Milestone 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_DSA_Milestone_3__c</fullName>
        <label>DSA Milestone 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Other_Contract_Type__c</fullName>
        <label>Other - Contract Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Outstanding_Commercial_Risks__c</fullName>
        <label>Outstanding Commercial Risks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_RES_Market__c</fullName>
        <label>RES Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Reasons_for_Withdrawing__c</fullName>
        <label>Reasons for Withdrawing</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Status_of_Tender_Process__c</fullName>
        <label>Status of Tender Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Decline by RES</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ignore_Rank_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Rank Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interconnection_KVA__c</fullName>
        <description>Needed for Support Services. All Technologies.</description>
        <label>Interconnection KVA</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Risks__c</fullName>
        <label>Key Risks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kickoff_Date__c</fullName>
        <description>Formula that calculates to equal 6 weeks prior to &apos;Construction Start&apos; date field</description>
        <formula>IF(ISBLANK(Construction_Start__c),null,Construction_Start__c-42)</formula>
        <inlineHelpText>Formula that calculates to equal 6 weeks prior to &apos;Construction Start&apos; date field</inlineHelpText>
        <label>Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LNTP_Amount__c</fullName>
        <label>LNTP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNTP_Date__c</fullName>
        <label>LNTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Update__c</fullName>
        <inlineHelpText>Any recent changes within the Opportunity to be discussed in weekly status meetings.</inlineHelpText>
        <label>Latest Update</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Latitude</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Revisions_to_Prior_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have we negotiated this, or another, form of contract with this client before? If so, should our revisions conform to the prior agreement?</inlineHelpText>
        <label>Revisions Conform to Prior Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Work_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be hidden, as it is just used to run a workflow rule via the &quot;Legal RFP Support&quot; custom button.</description>
        <label>Legal Work Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <label>Line Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Please provide the Cities, Counties, and any other relevant information related to the Opportunity&apos;s location.</inlineHelpText>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Longitude</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Major_Transaction_Comments__c</fullName>
        <inlineHelpText>High level executive update for Priority 1 opportunities only</inlineHelpText>
        <label>Major Transaction Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Major_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <inlineHelpText>Cost Plus Markup Percentage</inlineHelpText>
        <label>Markup %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCF__c</fullName>
        <label>NCF</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NTP_Date__c</fullName>
        <description>Created for the Australian Services setup</description>
        <label>NTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Negotiations_Date__c</fullName>
        <description>Used by Distributed, to indicate when an Oppty has moved into the Negotiations Stage.</description>
        <inlineHelpText>Field is auto-populated, once an Opportunity has moved into the Negotiations Stage.</inlineHelpText>
        <label>Negotiations Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NorthSolarLost__c</fullName>
        <label>NorthSolarLost</label>
        <summaryFilterItems>
            <field>PPA_Bid__c.Stage_Phase__c</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PPA_Bid__c.Region__c</field>
            <operation>equals</operation>
            <value>North - Solar</value>
        </summaryFilterItems>
        <summaryForeignKey>PPA_Bid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NorthSolarOpen__c</fullName>
        <label>NorthSolarOpen</label>
        <summaryFilterItems>
            <field>PPA_Bid__c.Region__c</field>
            <operation>equals</operation>
            <value>North - Solar</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PPA_Bid__c.Stage_Phase__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>PPA_Bid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NorthSolarWon__c</fullName>
        <label>NorthSolarWon</label>
        <summaryFilterItems>
            <field>PPA_Bid__c.Region__c</field>
            <operation>equals</operation>
            <value>North - Solar</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PPA_Bid__c.Stage_Phase__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>PPA_Bid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NorthSolar__c</fullName>
        <formula>IF(NorthSolarWon__c&gt;0,&quot;Won&quot;,
IF(NorthSolarLost__c&gt;0,&quot;Lost&quot;,
IF(NorthSolarOpen__c&gt;0,&quot;Open&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>North Solar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NorthWindLost__c</fullName>
        <label>NorthWindLost</label>
        <summaryFilterItems>
            <field>PPA_Bid__c.Stage_Phase__c</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PPA_Bid__c.Region__c</field>
            <operation>equals</operation>
            <value>North - Wind</value>
        </summaryFilterItems>
        <summaryForeignKey>PPA_Bid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NorthWindOpen__c</fullName>
        <label>NorthWindOpen</label>
        <summaryFilterItems>
            <field>PPA_Bid__c.Region__c</field>
            <operation>equals</operation>
            <value>North - Wind</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PPA_Bid__c.Stage_Phase__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>PPA_Bid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NorthWindWon__c</fullName>
        <label>NorthWindWon</label>
        <summaryFilterItems>
            <field>PPA_Bid__c.Stage_Phase__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PPA_Bid__c.Region__c</field>
            <operation>equals</operation>
            <value>North - Wind</value>
        </summaryFilterItems>
        <summaryForeignKey>PPA_Bid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NorthWind__c</fullName>
        <formula>IF(NorthWindWon__c&gt;0,&quot;Won&quot;,
IF(NorthWindLost__c&gt;0,&quot;Lost&quot;,
IF(NorthWindOpen__c&gt;0,&quot;Open&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>North Wind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_M_Price_yr__c</fullName>
        <inlineHelpText>When this field is changed it triggers the auto-calculation of the &apos;Amount&apos; field (taking in consideration the &apos;Term (yrs)&apos; field).</inlineHelpText>
        <label>Annual Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>Auto-generated unique identifier for Opportunities.</inlineHelpText>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origination_Bid_Structure__c</fullName>
        <label>Origination Bid Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>Bilateral Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origination_Shortlist_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if an opportunity has been shortlisted</description>
        <inlineHelpText>Was this opportunity shortlisted?</inlineHelpText>
        <label>Origination Shortlist Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origination_Sub_Stage__c</fullName>
        <label>Origination Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forfeited</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_Reason__c</fullName>
        <description>Preselected Competitor is when the RFP seems to be written with a particular project in mind and is not actually a competitive process.</description>
        <inlineHelpText>Nonconforming Bid= We couldn&apos;t meet the terms of their RFP
Conflicting Development Status= Our Project timeline didn&apos;t match up with the Client&apos;s
Preselected Competitor= When the RFP seems to be written with a particular competitor&apos;s project in mind</inlineHelpText>
        <label>Outcome Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conflicting Development Status</fullName>
                </value>
                <value>
                    <fullName>Contractual</fullName>
                </value>
                <value>
                    <fullName>Existing relationship with competitor</fullName>
                </value>
                <value>
                    <fullName>Geographical stretch</fullName>
                </value>
                <value>
                    <fullName>Internal resources (Manpower)</fullName>
                </value>
                <value>
                    <fullName>Issue with previous work</fullName>
                </value>
                <value>
                    <fullName>Missing Skills set</fullName>
                </value>
                <value>
                    <fullName>Multiple reasons - (See Closed Reason Notes)</fullName>
                </value>
                <value>
                    <fullName>Non-conforming Bid</fullName>
                </value>
                <value>
                    <fullName>Preselected Competitor</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Risk allocation</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
                <value>
                    <fullName>Shortlisted-Forfeited</fullName>
                </value>
                <value>
                    <fullName>Shortlisted-Cancelled</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Timescale</fullName>
                </value>
                <value>
                    <fullName>Won Another Bid</fullName>
                </value>
                <value>
                    <fullName>No Longer Tracking</fullName>
                </value>
                <value>
                    <fullName>Other - (See Closed Reason Notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overhead_Margin__c</fullName>
        <formula>Gross_Profit__c +  Overhead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Overhead + Margin</inlineHelpText>
        <label>Overhead + Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overhead__c</fullName>
        <label>Overhead</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PCS_Manufacturer__c</fullName>
        <description>Needed for Storage team. Also a Support Services input.</description>
        <inlineHelpText>Please input the Name of the Vendor / Company, who is expected to supply RES with the Inverters, or PCS system.</inlineHelpText>
        <label>PCS/Inverter Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dynapower</fullName>
                </value>
                <value>
                    <fullName>Eaton</fullName>
                </value>
                <value>
                    <fullName>KACO</fullName>
                </value>
                <value>
                    <fullName>LSIS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parker Hannafin</fullName>
                </value>
                <value>
                    <fullName>Power Electronics</fullName>
                </value>
                <value>
                    <fullName>Princeton Power</fullName>
                </value>
                <value>
                    <fullName>Schneider</fullName>
                </value>
                <value>
                    <fullName>Siemens</fullName>
                </value>
                <value>
                    <fullName>SMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPA_Escalation__c</fullName>
        <label>PPA Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPA_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPA Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Ownership Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPA_Price__c</fullName>
        <inlineHelpText>Either the Contracted PPA Price, or our most recent PPA Bid Price</inlineHelpText>
        <label>PPA Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>